--- a/StackOverflowCollections/Base.lproj/Main.storyboard
+++ b/StackOverflowCollections/Base.lproj/Main.storyboard
@@ -30,17 +30,17 @@
                                     <rect key="frame" x="0.0" y="0.0" width="370" height="220"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="qA1-GJ-fen">
-                                            <rect key="frame" x="192" y="16" width="370" height="124"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="qA1-GJ-fen">
+                                            <rect key="frame" x="158" y="16" width="370" height="124"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Questions Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="keH-cH-82h">
-                                                    <rect key="frame" x="0.0" y="0.0" width="370" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="370" height="59.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Tags" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZZ6-xx-BDf">
-                                                    <rect key="frame" x="0.0" y="25.5" width="370" height="98.5"/>
+                                                    <rect key="frame" x="0.0" y="64.5" width="370" height="59.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -48,7 +48,7 @@
                                             </subviews>
                                         </stackView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="64O-tG-dtm">
-                                            <rect key="frame" x="16" y="20" width="160" height="116"/>
+                                            <rect key="frame" x="-18" y="20" width="160" height="116"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="greencircle" translatesAutoresizingMaskIntoConstraints="NO" id="scn-o1-xIh">
                                                     <rect key="frame" x="18" y="16" width="124" height="110"/>
